--- a/my-website/src/App.css
+++ b/my-website/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: #32373b;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
 }
