--- a/my-website/src/Layout/Layout.css
+++ b/my-website/src/Layout/Layout.css
@@ -1,4 +1,8 @@
 .Header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   flex: 1;
   display: flex;
   flex-direction: row;
@@ -17,6 +21,7 @@
 .Header-Buttons {
   padding: 24px;
   display: flex;
+  flex-direction: row;
 }
 
 .App-header-button {
