--- a/my-website/src/Layout/Layout.css
+++ b/my-website/src/Layout/Layout.css
@@ -1,5 +1,6 @@
 .Header {
-  position: absolute;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
