--- a/my-website/src/Layout/Layout.css
+++ b/my-website/src/Layout/Layout.css
@@ -12,11 +12,14 @@
 
 .Header-Text-Container {
   padding: 24px;
+  margin-left: 50px;
 }
 
 .Header-Text {
-  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
   font-weight: 600;
+  color: white;
 }
 
 .Header-Buttons {
@@ -27,5 +30,8 @@
 
 .App-header-button {
   margin: 12px;
-  background-color: aqua;
+  height: 56px;
+  width: 86px;
+  background-color: antiquewhite;
+  border-radius: 20px;
 }
