--- a/my-website/src/components/landing-view/Landing-View.css
+++ b/my-website/src/components/landing-view/Landing-View.css
@@ -1,5 +1,54 @@
 .Landing-Model {
   display: flex;
-  width: 100%;
-  height: 1000px;
+  width: 100vw;
+  height: 100vh;
+  background-color: blue;
+}
+
+.Landing-Image {
+  width: 100vw;
+  height: 100vh;
+}
+
+.Landing-Feature {
+  position: absolute;
+  width: 100vw;
+  top: 40vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  /* background-color: blue; */
+}
+
+.Landing-Title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 42px;
+  font-weight: 600;
+  color: white;
+  padding-right: 24px;
+  align-self: center;
+}
+
+.Splitter {
+  height: 200px;
+  width: 5px;
+  background-color: white;
+}
+
+.Landing-Button-Stack {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-left: 24px;
+}
+
+.Landing-Button {
+  width: 120px;
+  height: 3vh;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  color: white;
+  background: none;
+  border: none;
 }
